Bug 469446. Necko should be able to cache byte-range requests when the start offset is zero. Then we can make our initial video load a byte-range request to detect whether the server supports byte-range requests, and the video data can still be cached. r=doublec,sr=roc,r=bzbarsky

--HG--
extra : rebase_source : acec408274be2b770b5f1936b4f915ef1bafa60b